# acrelab-cdl

./: .gitignore  Dockerfile  pyproject.toml
cdl/: crop_rotation.py  utils.py
cdl_ca_crop/: ca_crop_cdl_merge.py  ca_crop_merge_cdl.zsh  ca_crop_to_geojson.zsh
cdl_california_crop_merge/: ca_crop_merge_cdl.zsh  ca_crop_rasterize_attributes.zsh  ca_crop_to_flatgeobuf.sql  ca_crop_to_flatgeobuf.zsh
cdl_california_crop_merge/archive/: ca_crop_cdl_merge.py  ca_crop_merge_cdl.ipynb
cdl_ingest/: cdl.py
resources/: cdl_colormap.qml
