[tool.poetry]
name = "cdl"
version = "0.1.0"
description = "CDL Data Ingest, Transformation, and Loading"
authors = ["Kenny George <kenny.george@acres.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
rasterio = "^1.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
